kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-app
  labels:
    app: vote-app
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: vote-app
  type: ClusterIP
